Added request sorting for message sorting.
Added additional UUID generation code.

USERGRID-1161